src/applications/peertube/ingress.yaml

  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peertube
  labels:
    app: peertube
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-pastis-hosting-net-issuer
    external-dns.alpha.kubernetes.io/hostname: keycloak.pastis-hosting.net
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - teloche.jeancloude.club
      secretName: peertube-tls
  rules:
    - host: teloche.jeancloude.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: peertube
                port: 
                  number: 9000
